feat: crud categorias y tipos de categorias mas init_bd adicion del a carpeta
